Style home screen

--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,26 @@
     <title>Dueet Live</title>
   </head>
   <body>
+    <script>
+      // https://css-tricks.com/the-trick-to-viewport-units-on-mobile/
+      // First we get the viewport height and we multiple it by 1% to get a value for a vh unit
+      let vh = window.innerHeight * 0.01;
+      // Then we set the value in the --vh custom property to the root of the document
+      document.documentElement.style.setProperty('--vh', `${vh}px`);
+      // We listen to the resize event
+      window.addEventListener('resize', () => {
+        // We execute the same script as before
+        let vh = window.innerHeight * 0.01;
+        document.documentElement.style.setProperty('--vh', `${vh}px`);
+      });
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
